fix layout issues with unreads and option toggles

--- a/public/js/views/menu/room/primary-collection/primary-collection-item-view.less
+++ b/public/js/views/menu/room/primary-collection/primary-collection-item-view.less
@@ -98,19 +98,11 @@
   border-radius: 100%;
   height:        @menu-unread-badge-size;
   width:         @menu-unread-badge-size;
-  margin-left:   auto;
+  margin-left:   1rem;
   font-size:     1.1rem;
   line-height:   @menu-unread-badge-size;
   text-align:    center;
   color:         white;
-
-  .desktop & {
-    margin-right:  @desktop-menu-left-padding;
-  }
-
-  .mobile & {
-    margin-right:  @mobile-menu-left-padding;
-  }
 }
 
 .room-item__options {
